[KOA-4697]: Banner alert alignment issue fix for new font version

--- a/packages/bpk-component-banner-alert/src/BpkBannerAlert.module.scss
+++ b/packages/bpk-component-banner-alert/src/BpkBannerAlert.module.scss
@@ -87,6 +87,7 @@
   }
 
   &__message {
+    margin-top: bpk-spacing-sm() / 2;
     flex-grow: 1;
   }
 
